# xeus-lua

./: .appveyor.yml  .gitignore  BuildWasmDockerfile  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  environment-dev.yml  environment-wasm-build.yml  environment-wasm-host.yml  environment.yml  readthedocs.yml  xeus-luaConfig.cmake.in
.azure-pipelines/: azure-pipelines-linux.yml  unix-build.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yml
asset_dir/lua_packages/ilua/: display.lua  html.lua  init.lua  pprint.lua  widgets.lua
cmake/: FindLua.cmake  FindLuaJIT.cmake  FindXCANVAS.cmake
cmake_emscripten/: FindLua.cmake
docs/: Doxyfile
docs/source/: conf.py  dev-build-options.rst  index.rst  installation.rst  usage.rst
docs/source/_static/: main_stylesheet.css
examples/: game_of_life.ipynb  tour.ipynb  widgets.ipynb
include/xeus-lua/: xeus_lua_config.hpp  xinterpreter.hpp
include/xeus-lua/sol/: config.hpp  sol.hpp
jupyterlite_gh_page/: package.json
jupyterlite_gh_page/lab/: package.json
jupyterlite_gh_page/retro/: index.template.js  package.json
notebooks/: game_of_life.ipynb  hehe.flac  io.ipynb  time.ipynb  tour.ipynb  widgets.ipynb  xcanvas.ipynb  xeus-lua.ipynb
share/jupyter/kernels/xlua/: kernel.json  kernel.json.in
src/: lua_runtime.c  main.cpp  main_emscripten.cpp  main_emscripten_kernel.cpp  xcanvas.cpp  xcomplete.cpp  xcomplete.hpp  xdisplay.cpp  xextend.cpp  xextend.hpp  xinterpreter.cpp  xio.cpp  xjson.cpp  xtime.cpp  xwidgets.cpp  xwidgets.hpp
src/sol/: config.hpp  forward.hpp  sol.hpp
test/: test_xeus_lua_kernel.py  test_xlua_kernel.py
